--- a/s13-v264/RNWithoutExpo/package.json
+++ b/s13-v264/RNWithoutExpo/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli": "^7.0.1",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-image-picker": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
