--- a/s15-v285/package.json
+++ b/s15-v285/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "5.x",
     "@react-navigation/native": "5.x",
+    "@react-navigation/stack": "5.x",
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "~11.0.3",
