--- a/s16-v311/package.json
+++ b/s16-v311/package.json
@@ -16,6 +16,7 @@
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "~11.0.3",
+    "expo-notifications": "~0.14.0",
     "expo-screen-orientation": "~4.1.1",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
